Sized down with viewport and redid the SVG files, also defined fixed vh for machine. Looking pretty good already, just minor alignment fixes left

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -24,6 +24,10 @@ h1 {
 	font-size: 20px;
 }
 
+p {
+	margin: 2px;
+}
+
 /*LAYOUT AND FLEX*/
 
 @media only screen and (max-width:816px){
@@ -94,7 +98,9 @@ h1 {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: row;
 	        flex-direction: row;
-	padding: 80px;
+	padding-top: 5%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 /*FLEX ITEM FROM .MACHINEWRAPPER*/
@@ -130,7 +136,9 @@ h1 {
 	    -ms-flex: 3;
 	        flex: 3;
 	text-align: center;
+
 	min-width: 425px;
+	min-height: 100vh;
 	
 	display: -webkit-box;
 	
@@ -159,8 +167,9 @@ h1 {
 
 /*CHILD OF .RESULTPAPER*/
 .results {
-	padding-top: 5%;
-	padding-bottom: 5%;
+	margin: 5%;
+/*	padding-top: 5%;
+	padding-bottom: 5%;*/
 }
 
 /*FLEX CONTAINER FOR .KNOBBOX*/
@@ -185,12 +194,12 @@ h1 {
 
 /*FLEX ITEM FROM .MACHINE*/
 .Knobbox {
-	width: 20%;
-	min-width: 200px;
+	/*width: 20%;*/
+	/*min-width: 200px;*/
 	padding: 5%;
-	-webkit-box-flex: 1;
+/*	-webkit-box-flex: 1;
 	    -ms-flex: 1;
-	        flex: 1;
+	        flex: 1;*/
 
 	display: flex;
 	justify-content: center;
@@ -199,9 +208,9 @@ h1 {
 
 /*CHILD OF .KNOBBOX, CLASS GIVEN WITHIN SVG CODE*/
 .knobsvg {
-	max-height: 180px;
+/*	max-height: 180px;
 	padding: 5%;
-	width: 100%;
+	width: 100%;*/
 }
 
 /*CHILD OF .KNOBBOX*/
